<resources>
    <string name="app_name">JDD Store</string>
    <string name="powered_by_jdd_webmaster_ltd">Powered By JDD WebMaster LTD.</string>
    <string name="jdd_logo">JDD logo</string>
    <string name="first_name_error">First-Name can not be empty</string>
    <string name="first_name_short">First Name is too short</string>
    <string name="last_name_error">Field can not be empty</string>
    <string name="last_name_short">lastname is too short</string>
    <string name="field_empty">Enter your email address</string>
    <string name="enter_password">field can not be empty</string>
    <string name="passworde_short">password must be atleast 8 characters in length</string>
    <string name="confirm_password">confirm your password</string>
    <string name="password_mismatch">password do not match</string>
    <string name="agree_terms"><![CDATA[You have not agree to the Terms &amp; Condition]]></string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_product">Product</string>
    <string name="title_orders">Orders</string>
    <string name="please_wait">Please Wait...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Sub-total</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="lbl_out_of_stock">Out of Stock</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity</string>

    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>

    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Delivery Address</string>
    <string name="hint_zip_code">Additional Phone Number</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="btn_save_text">Save</string>
    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="address_update">Your address was updated successfully...</string>
    <string name="address_addedd">Your address was added successfully...</string>
    <string name="address_delete_successfully">Your address was deleted successfully...</string>
    <string name="delete">Deleting....</string>
    <string name="select_address">SELECT ADDRESS</string>


    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product(s)</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">ORDER</string>
    <string name="place_order">Placing Order....</string>
    <string name="no_orders_placed_yet">No Order Placed Yet.....</string>


    <!--END-->
</resources>