<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".code.ui.activities.CartListActivity"
    android:background="@color/colorOffWhite">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar_title_cart_list_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/header_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/header_back_arrow_cartList_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/defaultPadding"
            android:src="@drawable/ic_back_arrow" />

        <jdd.com.ng.jddwebmaster.jddstore.code.utils.MyCustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/defaultPadding"
            android:text="My Cart"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/headerTextSize" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart_items_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/rv_cart_item_marginTop"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ll_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar_title_cart_list_activity" />

    <jdd.com.ng.jddwebmaster.jddstore.code.utils.MyCustomTextView
        android:id="@+id/tv_no_cart_item_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="No Item Found!!!"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/no_data_found_textSize"
        app:layout_constraintBottom_toTopOf="@id/ll_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar_title_cart_list_activity" />

    <LinearLayout
        android:id="@+id/ll_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/ll_checkout_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <jdd.com.ng.jddwebmaster.jddstore.code.utils.MyCustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_subtotal"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/checkout_label_value_textSize" />

            <jdd.com.ng.jddwebmaster.jddstore.code.utils.MyCustomTextView
                android:id="@+id/tv_sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/checkout_label_value_textSize"
                tools:text="NGN 9100" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <jdd.com.ng.jddwebmaster.jddstore.code.utils.MyCustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_shipping_charge"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/checkout_label_value_textSize" />

            <jdd.com.ng.jddwebmaster.jddstore.code.utils.MyCustomTextView
                android:id="@+id/tv_shipping_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/checkout_label_value_textSize"
                tools:text="NGN 3009" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <jdd.com.ng.jddwebmaster.jddstore.code.utils.MyCustomTextViewBold
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_total_amount"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/checkout_label_value_textSize" />

            <jdd.com.ng.jddwebmaster.jddstore.code.utils.MyCustomTextViewBold
                android:id="@+id/tv_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/checkout_label_value_textSize"
                tools:text="NGN 8110" />
        </LinearLayout>

        <jdd.com.ng.jddwebmaster.jddstore.code.utils.MyCustomButton
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_checkout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_terms_and_condition" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>